added responsive jumystap.css and jumystap.html files

--- a/jumystap.html
+++ b/jumystap.html
@@ -19,7 +19,7 @@
             <ul class="nav-menu">
                 <li>Home</li>
                 <li>About us</li>
-                <li>How it works</li>
+                <li class = "nav-menu-last-li">How it works</li>
             </ul>
             <div class="nav-button">
                 <button class="nav-button-get-started">
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="content-image">
-                <img alt="Visual Content" src="./assets/VisualContent.png" />;
+                <img alt="Visual Content" src="./assets/VisualContent.png" />
             </div>
         </div>
     </section>
@@ -53,17 +53,17 @@
         </div>
         <div class="how-it-works-steps">
             <div class="how-it-works-step">
-                <img alt="one" src="./assets/1.png" />
+                <img class = "numbers" alt="one" src="./assets/1.png" />
                 <h2>Show your best skills</h2>
                 <p>Upload your CV</p>
             </div>
             <div class="how-it-works-step">
-                <img alt="one" src="./assets/2.png" />
+                <img class = "numbers" alt="one" src="./assets/2.png" />
                 <h2>Search for the best match</h2>
                 <p>Lorem Ipsum Description Text</p>
             </div>
             <div class="how-it-works-step">
-                <img alt="one" src="./assets/3.png" />
+                <img class = "numbers" alt="one" src="./assets/3.png" />
                 <h2>Find the best opportunity</h2>
                 <p>Lorem Ipsum Description Text</p>
             </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="upload-cv-block">
             <div class="upload-cv-image">
-                <img alt="Visual Content" src="./assets/VisualContent1.png" />;
+                <img alt="Visual Content" src="./assets/VisualContent1.png" />
             </div>
             <div class="upload-cv-info">
                 <div class="upload-cv-texts">
